2019-07-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_simple.R: A few more simple tests

2019-07-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.5

	* vignettes/rmd/anytime-intro.Rmd: More edits
	* vignettes/anytime-intro.pdf: Idem

	* inst/tinytest/test_gh_issue_96.R: More polish
	* inst/tinytest/test_useR.R: Idem

	* local/test_useR.R: Deactivated as it fails at Travis
	
2019-07-27  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (utctime): Account for difference to UTC when useR=TRUE
	* inst/tinytest/test_useR.R: New test file for useR=TRUE

	* inst/tinytest/test_all_formats.R: Condition a few more tests
	* inst/tinytest/test_gh_issue_96.R: Lower 'tol' on two tests

	* inst/tinytest/test_all_formats.R: Set TZ at start
	* inst/tinytest/test_assertions.R: Idem
	* inst/tinytest/test_bulk.R: Idem
	* inst/tinytest/test_gh_issue_100.R: Idem
	* inst/tinytest/test_utilities.R: Idem
	
	* vignettes/rmd/anytime-intro.Rmd: Some edits

2019-07-26  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (utctime, anydate, utcdate): Also use option for
	possible useR default
	* R/format.R: Documentation tweaks
	* man/anytime-package.Rd: Idem
	* man/iso8601.Rd: Idem
	* README.md: Idem
	* vignettes/rmd/anytime-introduction.Rmd: Idem

2019-07-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (r_stringToTime): Correct 'useR' to date conversion

2019-07-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/tinytest/test_all_formats.R: Tweaks for Windows tests
	* inst/tinytest/test_bulk.R: Idem

	* .travis.yml (install): Simplified with two fewer required packages

2019-07-23  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (anytime): The useR argument can now be set via an option
	* man/anytime.Rd: Ditto

2019-07-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_r_format.R: Deactivate test as it fails on Travis
