@@ -1,3 +1,13 @@
+2019-07-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version
+
+	* src/anytime.cpp (fmt): Renamed from format() to avoid clashes
+	* src/RcppExports.cpp (_anytime_fmt): Idem
+	* R/RcppExports.R (fmt): Idem
+	* inst/tinytest/test_simple.R: Ditto in test use
+	* inst/tinytest/test_all_formats.R: Idem
+
 2019-07-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/tinytest/test_simple.R: A few more simple tests
